# red-team-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/red_team_mcp/: __init__.py  bootstrap.py  codex_proxy.py  prompts.py  server.py
