[project]
name = "red-team-mcp"
version = "0.1.0"
description = "MCP server exposing adversarial review, devil's advocate, and red-team code review via any OpenAI-compatible text backend (codex-proxy, OpenAI, OpenRouter, local LLM, etc.)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "spadle" }]
keywords = ["mcp", "claude", "red-team", "adversarial", "code-review", "codex"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.2.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/spadle/red-team-mcp"
Issues = "https://github.com/spadle/red-team-mcp/issues"

[project.scripts]
red-team-mcp = "red_team_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/red_team_mcp"]
